# Renderer-Base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RendererBasePch.hpp
RendererBase/: Renderer.hpp  RendererBasePch.hpp  RendererObjects.cpp  RendererObjects.hpp  Shader.hpp
RendererBase/Objects/: ObjectsBase.cpp  ObjectsBase.hpp  Quad.cpp  RendererObjects.hpp  Triangle.cpp
WindowBase/: Window.hpp
include/: RendererBasePch.hpp
include/RendererBase/: Renderer.hpp  Shader.hpp
include/RendererBase/Camera/: CameraComponents.hpp
include/RendererBase/Objects/: ObjectsBase.hpp  Quad.hpp  Triangle.hpp
include/WindowBase/: Window.hpp
src/RendererBase/Objects/: ObjectsBase.cpp  Quad.cpp  Triangle.cpp
